# My_Projects

./: README.md
Contacts_Book_App/: Address.cpp  Address.h  CMakeLists.txt  ContactsBook.h  Person.cpp  Person.h  Vector.cpp  Vector.h  main.cpp
IEEE_ZU_UI/: index.html
IEEE_ZU_UI/CSS_Style/: main.css
Online Library/: Book.cpp  Book.h  BookList.cpp  BookList.h  CMakeLists.txt  User.cpp  User.h  UserList.cpp  UserList.h  main.cpp
QuranPlaylist/: AudioPlayer.h  CMakeLists.txt  DoublyLinkedList.h  Library.h  PlayList.h  Simulate.h  Surah.h  main.cpp
Tank_Battle/: CMakeLists.txt  main.cpp
